# close-mongo-ops-manager

./: .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  hello.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/close_mongo_ops_manager/: app.py  config_manager.py  filterbar.py  help_screen.py  kill_confirmation_screen.py  log_screen.py  mongodb_manager.py  operation_details_screen.py  operations_view.py  theme_manager.py
tests/: conftest.py  test_app.py  test_config_manager.py  test_filterbar.py  test_kill_confirmation_screen.py  test_log_screen.py  test_mongodb_manager.py  test_operation_details_screen.py  test_operations_view.py  test_statusbar.py  test_theme_manager.py  test_theme_screen.py
